Big Search - Fixe current location icon on IE

--- a/static/scss/PUB/_Component_big-search.scss
+++ b/static/scss/PUB/_Component_big-search.scss
@@ -80,6 +80,17 @@
                                 flex: 0 0 auto;
                             }
 
+                            .current-location {
+                                height: 28px;
+                                width: 28px;
+
+                                &:hover {
+                                    svg path {
+                                        fill: $red;
+                                    }
+                                }
+                            }
+
                             .search {
                                 height: 58px;
                                 margin: 0;
